packages/truffle/test/sources/migrations/error/migrations/5_migrations_reason.js
const RevertWithReason = artifacts.require("RevertWithReason");

module.exports = async function(deployer) {
  await deployer.deploy(RevertWithReason);
};
